[gd_scene load_steps=19 format=3 uid="uid://dopvktdwow2x2"]

[ext_resource type="Texture2D" uid="uid://bsj1yffhc6ynn" path="res://background/LD55_BG_5.png" id="1_00n8o"]
[ext_resource type="Script" path="res://scripts/UI_EnergyBar.gd" id="2_ntm7e"]
[ext_resource type="Texture2D" uid="uid://dywhb84sbakn5" path="res://background/LD55_BG_4.png" id="2_rmh05"]
[ext_resource type="Texture2D" uid="uid://cada6sw6amayk" path="res://background/LD55_BG_3.png" id="3_ohu6k"]
[ext_resource type="Texture2D" uid="uid://cpfkimbg1t40h" path="res://background/LD55_BG_2.png" id="4_7to5x"]
[ext_resource type="Texture2D" uid="uid://nl7kv12l0hg4" path="res://background/LD55_BG_1.png" id="5_1nmfx"]
[ext_resource type="TileSet" uid="uid://bcxbnn32fyu0k" path="res://map/ts_graveyard.tres" id="6_vgbv1"]
[ext_resource type="PackedScene" uid="uid://d1ucl6tqgbvcl" path="res://player/player.tscn" id="7_okguq"]
[ext_resource type="Script" path="res://scripts/MapArea.gd" id="8_heoda"]
[ext_resource type="Script" path="res://scenes/Closer.gd" id="9_gcrik"]
[ext_resource type="Script" path="res://scenes/Control.gd" id="10_o2dp0"]
[ext_resource type="PackedScene" uid="uid://eo7kkqjpwxre" path="res://map/spawn_point.tscn" id="11_kd5j1"]
[ext_resource type="Script" path="res://scripts/MapManager.gd" id="12_8ep5p"]
[ext_resource type="PackedScene" uid="uid://di8kmptygdf20" path="res://map/energy_ball.tscn" id="13_mnjv8"]
[ext_resource type="Script" path="res://scenes/CollectableSpawn.gd" id="13_xe32i"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mivih"]
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.403922, 0.403922, 0.403922, 1)
expand_margin_left = 1.0
expand_margin_top = 1.0
expand_margin_right = 1.0
expand_margin_bottom = 1.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s0uqp"]
bg_color = Color(0.305882, 0.694118, 0.4, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8etf5"]
size = Vector2(400, 180)

[node name="Node" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Debug" type="Control" parent="CanvasLayer/HUD" node_paths=PackedStringArray("player")]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("10_o2dp0")
player = NodePath("../../../2D_Canvas/Player")

[node name="VBox" type="VBoxContainer" parent="CanvasLayer/HUD/Debug"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FPS" type="Label" parent="CanvasLayer/HUD/Debug/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "FPS :"

[node name="IsClimbing" type="Label" parent="CanvasLayer/HUD/Debug/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "FPS :"

[node name="IsGliding" type="Label" parent="CanvasLayer/HUD/Debug/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "FPS :"

[node name="Pos" type="Label" parent="CanvasLayer/HUD/Debug/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "FPS :"

[node name="Vel" type="Label" parent="CanvasLayer/HUD/Debug/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
text = "FPS :"

[node name="Control2" type="Control" parent="CanvasLayer/HUD"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Container" type="Container" parent="CanvasLayer/HUD/Control2"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -118.0
offset_bottom = 41.0
grow_horizontal = 0

[node name="EnergyBar" type="ProgressBar" parent="CanvasLayer/HUD/Control2"]
layout_direction = 2
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -60.0
offset_top = 9.0
offset_right = -12.0
offset_bottom = 13.0
grow_horizontal = 0
size_flags_horizontal = 4
auto_translate = false
theme_override_styles/background = SubResource("StyleBoxFlat_mivih")
theme_override_styles/fill = SubResource("StyleBoxFlat_s0uqp")
value = 50.0
rounded = true
fill_mode = 1
show_percentage = false
script = ExtResource("2_ntm7e")

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
scroll_offset = Vector2(913, 500)
scroll_base_offset = Vector2(0, 60)

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
texture = ExtResource("1_00n8o")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.05, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer2"]
texture = ExtResource("2_rmh05")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(0, 1)
motion_scale = Vector2(0.1, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer3"]
texture = ExtResource("3_ohu6k")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
position = Vector2(-1, 0)
motion_scale = Vector2(0.2, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer4"]
texture = ExtResource("4_7to5x")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.3, 1)
motion_mirroring = Vector2(640, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer5"]
texture = ExtResource("5_1nmfx")

[node name="2D_Canvas" type="Node2D" parent="."]

[node name="TileMap" type="TileMap" parent="2D_Canvas"]
tile_set = ExtResource("6_vgbv1")
format = 2
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(393216, 720896, 2, 458752, 393216, 1, 458753, 655360, 0, 458754, 655360, 0, 458755, 720896, 0, 524291, 393216, 1, 524290, 589824, 2, 524289, 589824, 2, 524288, 589824, 2, 524292, 720896, 0, 589828, 720896, 2, 655364, 393216, 1, 655365, 655360, 0, 655366, 655360, 0, 655367, 655360, 0, 655368, 655360, 0, 655369, 327680, 1, 655370, 589824, 2, 655371, 589824, 2, 655372, 589824, 2, 655373, 393216, 1, 655374, 655360, 0, 655375, 655360, 0, 655377, 327680, 1, 655378, 393216, 1, 655379, 655360, 0, 655380, 327680, 1, 655381, 589824, 2, 655382, 393216, 1, 655383, 655360, 0, 655384, 655360, 0, 589841, 524288, 1, 524305, 524288, 0, 524306, 458752, 1, 589842, 720896, 2, 458770, 0, 0, 589845, 327680, 1, 524309, 524288, 1, 458773, 262144, 1, 393237, 0, 0, 458774, 720896, 0, 524310, 720896, 2, 589846, 720896, 2, 589844, 524288, 0, 655385, 655360, 0, 655386, 655360, 0, 655387, 655360, 0, 655388, 655360, 0, 655389, 589824, 0, 589853, 0, 1, 524317, 0, 0, 655390, 655360, 0, 655391, 655360, 0, 589856, 524288, 1, 524320, 524288, 0, 524321, 327680, 1, 458785, 524288, 1, 393249, 524288, 0, 589857, 589824, 2, 655392, 327680, 1, 655393, 589824, 2, 655394, 589824, 2, 589858, 589824, 2, 524322, 589824, 2, 524323, 393216, 1, 524324, 720896, 0, 589860, 720896, 2, 589859, 589824, 2, 655395, 589824, 2, 655396, 393216, 1, 262178, 524288, 0, 327714, 524288, 1, 393250, 327680, 1, 458786, 589824, 2, 589827, 589824, 2, 589826, 589824, 2, 589825, 589824, 2, 589824, 589824, 2, 655359, 589824, 2, 655360, 589824, 2, 655361, 589824, 2, 655362, 589824, 2, 655363, 589824, 2, 720895, 589824, 2, 720894, 524288, 1, 327680, 393216, 2, 262144, 589824, 2, 196608, 589824, 2, 131072, 393216, 1, 65536, 720896, 2, 0, 720896, 0, 131073, 720896, 0, 196609, 720896, 2, 262145, 720896, 2, 327681, 720896, 3, 589837, 720896, 0, 589836, 655360, 0, 589835, 655360, 0, 589834, 655360, 0, 589833, 524288, 0, 196643, 0, 0, 262179, 458752, 1, 327715, 720896, 2, 393251, 720896, 2, 458787, 720896, 2, 655397, 655360, 0, 655398, 655360, 0, 655399, 655360, 0, 655400, 655360, 0, 655402, 655360, 0, 655401, 655360, 0, 655403, 655360, 0, 655404, 655360, 0, 655405, 655360, 0, 655406, 655360, 0, 655407, 655360, 0, 655408, 655360, 0, 655409, 655360, 0, 655410, 655360, 0, 655411, 655360, 0, 655412, 655360, 0, 655413, 655360, 0, 655414, 655360, 0, 655415, 655360, 0, 655416, 327680, 1, 655417, 589824, 2, 589881, 589824, 2, 524345, 589824, 2, 458809, 589824, 2, 393273, 589824, 2, 327737, 262144, 3, 262201, 0, 1, 196665, 0, 0, 589880, 524288, 1, 524344, 524288, 1, 458808, 524288, 1, 393272, 524288, 1, 327736, 524288, 0, 327738, 720896, 0, 393274, 720896, 2, 458810, 720896, 2, 524346, 720896, 2, 655418, 720896, 2, 589882, 720896, 2, 720954, 720896, 2, 720953, 589824, 2, 720952, 589824, 2, 720951, 589824, 2, 720950, 589824, 2, 720949, 589824, 2, 720948, 589824, 2, 720947, 589824, 2, 720946, 589824, 2, 720945, 589824, 2, 720944, 589824, 2, 720943, 589824, 2, 720942, 589824, 2, 720941, 589824, 2, 720940, 589824, 2, 786481, 589824, 3, 786482, 589824, 3, 786483, 589824, 3, 786484, 589824, 3, 786485, 589824, 3, 786486, 589824, 3, 786487, 589824, 3, 786488, 589824, 3, 786489, 589824, 3, 786490, 393216, 3, 786491, 196608, 3, 786480, 589824, 3, 786479, 589824, 3, 786478, 589824, 3, 786477, 589824, 3, 786476, 589824, 3, 786475, 589824, 3, 786474, 589824, 3, 786473, 589824, 3, 786472, 589824, 3, 786471, 589824, 3, 786470, 589824, 3, 786469, 589824, 3, 786468, 589824, 3, 720939, 589824, 2, 720938, 589824, 2, 720937, 589824, 2, 720936, 589824, 2, 720935, 589824, 2, 720934, 589824, 2, 720933, 589824, 2, 720932, 589824, 2, 720931, 589824, 2, 720930, 589824, 2, 720929, 589824, 2, 720928, 589824, 2, 720927, 589824, 2, 720926, 589824, 2, 786467, 589824, 3, 786466, 589824, 3, 786465, 589824, 3, 786464, 589824, 3, 786463, 589824, 3, 786462, 589824, 3, 786461, 589824, 3, 786460, 589824, 3, 786459, 589824, 3, 786458, 589824, 3, 786457, 589824, 3, 786456, 589824, 3, 786455, 589824, 3, 786454, 589824, 3, 786453, 589824, 3, 786452, 589824, 3, 786451, 589824, 3, 720916, 589824, 2, 720917, 589824, 2, 720918, 589824, 2, 720919, 589824, 2, 720921, 589824, 2, 720920, 589824, 2, 720922, 589824, 2, 720923, 589824, 2, 720924, 589824, 2, 720925, 589824, 2, 720915, 589824, 2, 720914, 589824, 2, 720913, 589824, 2, 720912, 589824, 2, 720911, 589824, 2, 720910, 589824, 2, 786450, 589824, 3, 786449, 589824, 3, 786448, 589824, 3, 786447, 589824, 3, 786446, 589824, 3, 786445, 589824, 3, 786444, 589824, 3, 786443, 589824, 3, 786442, 589824, 3, 786441, 589824, 3, 720909, 589824, 2, 720908, 589824, 2, 720907, 589824, 2, 720906, 589824, 2, 720905, 589824, 2, 720904, 589824, 2, 720903, 589824, 2, 720902, 589824, 2, 720901, 589824, 2, 720900, 589824, 2, 720899, 589824, 2, 720898, 589824, 2, 720897, 589824, 2, 720896, 589824, 2, 786431, 589824, 2, 786430, 524288, 1, 851966, 524288, 3, 851967, 589824, 3, 786432, 589824, 3, 786433, 589824, 3, 786434, 589824, 3, 786435, 589824, 3, 786436, 589824, 3, 786437, 589824, 3, 786438, 589824, 3, 786439, 589824, 3, 786440, 589824, 3, 589823, 589824, 2, 524287, 589824, 2, 458751, 589824, 2, 393215, 589824, 2, 327679, 589824, 2, 262143, 589824, 2, 196607, 589824, 2, 131071, 589824, 2, 65535, 655360, 0, 65534, 524288, 0, 131070, 524288, 1, 196606, 524288, 1, 262142, 524288, 1, 327678, 524288, 1, 393214, 524288, 1, 458750, 524288, 1, 524286, 524288, 1, 589822, 524288, 1, 655358, 524288, 1, 655376, 655360, 0, 589838, 2, 65536, 589839, 2, 65536, 589840, 2, 65536)
layer_1/name = "Traps"
layer_1/enabled = false
layer_1/tile_data = PackedInt32Array()
layer_2/name = "Con"
layer_2/tile_data = PackedInt32Array()

[node name="Player" parent="2D_Canvas" instance=ExtResource("7_okguq")]
position = Vector2(159, 143)

[node name="Area2D" type="Area2D" parent="2D_Canvas"]
visible = false
script = ExtResource("8_heoda")

[node name="CollisionShape2D" type="CollisionShape2D" parent="2D_Canvas/Area2D"]
position = Vector2(200, 90)
shape = SubResource("RectangleShape2D_8etf5")

[node name="Node" type="Node" parent="2D_Canvas"]
script = ExtResource("9_gcrik")

[node name="Node2" type="Node" parent="2D_Canvas"]

[node name="SpawnPoint" parent="2D_Canvas/Node2" node_paths=PackedStringArray("map_manager") instance=ExtResource("11_kd5j1")]
light_mask = 8
visibility_layer = 2
position = Vector2(56, 112)
map_manager = NodePath("../../../MapManager")

[node name="SpawnPoint2" parent="2D_Canvas/Node2" node_paths=PackedStringArray("map_manager") instance=ExtResource("11_kd5j1")]
light_mask = 8
visibility_layer = 2
position = Vector2(360, 112)
map_manager = NodePath("../../../MapManager")

[node name="Collectables" type="Node" parent="2D_Canvas"]

[node name="Energy_Spawn_Point" type="Marker2D" parent="2D_Canvas/Collectables"]
position = Vector2(232, 96)
gizmo_extents = 23.8
script = ExtResource("13_xe32i")
collectable_scene = ExtResource("13_mnjv8")

[node name="InGame" type="Node2D" parent="."]

[node name="MapManager" type="Node" parent="." node_paths=PackedStringArray("player", "initial_spawn_point")]
script = ExtResource("12_8ep5p")
player = NodePath("../2D_Canvas/Player")
initial_spawn_point = NodePath("../2D_Canvas/Node2/SpawnPoint")

[connection signal="body_entered" from="2D_Canvas/TileMap/SpikeTrapGround" to="2D_Canvas/TileMap/SpikeTrapGround" method="_on_body_entered"]
[connection signal="body_entered" from="2D_Canvas/TileMap/@Area2D@97740" to="2D_Canvas/TileMap/@Area2D@97740" method="_on_body_entered"]
[connection signal="body_entered" from="2D_Canvas/TileMap/@Area2D@97741" to="2D_Canvas/TileMap/@Area2D@97741" method="_on_body_entered"]
[connection signal="respawn" from="2D_Canvas/Player" to="MapManager" method="_on_player_respawn"]
[connection signal="body_entered" from="2D_Canvas/Area2D" to="2D_Canvas/Area2D" method="_on_body_entered"]
[connection signal="body_entered" from="2D_Canvas/Collectables/Energy_Spawn_Point/EnergyBall" to="2D_Canvas/Collectables/Energy_Spawn_Point/EnergyBall" method="_on_body_entered"]
